--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-
+		<title>RV Beers</title>
 		<link rel="stylesheet" href="https://cdn.gitcdn.link/cdn/angular/bower-material/v1.1.3/angular-material.css">
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
@@ -14,18 +14,54 @@
 		<script type="text/javascript" src="https://cdn.gitcdn.link/cdn/angular/bower-material/v1.1.3/angular-material.js"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-resource.js"></script>
 
-		<link rel="stylesheet" href="scripts/styles.css">
-		<script type="text/javascript" src="scripts/app.js"></script>
+		<link rel="stylesheet" href="scripts/css/styles.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+		<script type="text/javascript" src="scripts/js/app.js"></script>
+
 	</head>
 
 	<body>
-		<div ng-controller="DemoCtrl">
+		<div class="top_background_image"></div>
+		<div ng-controller="DemoCtrl" class="container">
 
+			<header>
+				<md-input-container>
+          <label>Search</label>
+          <input ng-model="search">
+        </md-input-container>
+				<md-input-container>
+          <label>Filter</label>
+          <md-select ng-model="option">
+            <md-option><em>None</em></md-option>
+            <md-option ng-repeat="state in ctrl.states" ng-value="state.abbrev" ng-disabled="$index === 1"></md-option>
+						<md-option value="name">Name</md-option>
+		        <md-option value="abv">ABV</md-option>
+          </md-select>
+	      </md-input-container>
+			</header>
 
-			<!-- Code Here -->
-
-
+			<section>
+				<div ng-repeat="data in view.results | orderBy: option | filter: search" class="card">
+					<div class="card__img">
+						<img ng-src="{{data.image_url}}"/>
+					</div>
+					<div class="card__info">
+						<div class="card__info--header">
+							<div class="card__info--header-name">
+								<h2>{{data.name}}</h2>
+								<p>{{data.tagline}}</p>
+							</div>
+							<div class="card__info--header-abv">
+								<h4 class="card__info--abv">ABV: {{data.abv}}</h4>
+							</div>
+						</div>
+						<div class="card__info--beerInfo">
+							<p>{{data.description}}</p>
+						</div>
+					</div>
+				</div>
+			</section>
 		</div>
 	</body>
-	
+
 </html>
